# CLI-projekat

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp
Funkc/: command.cpp  command.h  commandFactory.cpp  commandFactory.h  commandInterpreter.cpp  commandInterpreter.h  functionsBase.h
Komande/: batchCommand.cpp  batchCommand.h  dateCommand.cpp  dateCommand.h  echoCommand.cpp  echoCommand.h  headCommand.cpp  headCommand.h  promptCommand.cpp  promptCommand.h  rmCommand.cpp  rmCommand.h  timeCommand.cpp  timeCommand.h  touchCommand.cpp  touchCommand.h  trCommand.cpp  trCommand.h  truncateCommand.cpp  truncateCommand.h  wcCommand.cpp  wcCommand.h
